first draft of mobile screen

--- a/index.html
+++ b/index.html
@@ -6,17 +6,32 @@
         <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 
         <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto&display=swap" rel="stylesheet">
+
         <link rel='stylesheet' href='css/mobilev1.css'>
     </head>
 
     <body>
         <div id='wrapper'>
-            <div id='header'>
-                <div id='logo'></div>
-                <span id='name'>My Name</span>
+            <div id='centered'>
+                <div id='header'>
+                    <div id='logo'></div>
+                    <h1>company Name</h1>
+                </div>
+                <div id='content'>
+                    <div id='subheader'>
+                        <div id='yourep' class='full'>You represent</div>
+                        <div id='icon'></div>
+                        <div id='title'>
+                            <p class='name'>Alex Gogetum</p>
+                            <p class='title'>(Individual Change Maker)</p>
+                        </div>
+                    </div>
+                    <div id='panel'>the panel</div>
+                </div>
             </div>
         </div>
     </body>
