--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div id='yourep' class='full'>You represent</div>
                         <div id='icon'></div>
                         <div id='title'>
-                            <p class='name'>Alex Gogetum</p>
+                            <p class='name'>Alex Gogetum 2</p>
                             <p class='title'>(Individual Change Maker)</p>
                         </div>
                     </div>
