added crown logo

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <div id='subheader'>
                         <div id='yourep' class='full'>You represent</div>
                         <div id='icon'></div>
+                        <div id='crown'></div>
                         <div id='title'>
                             <p class='name'>Alex Gogetum 2</p>
                             <p class='title'>(Individual Change Maker)</p>
