--- a/index.html
+++ b/index.html
@@ -40,34 +40,55 @@
                             <div class='icon resources'></div>
                             <div class='title'>Resources</div>
                         </div>
-                        <div class='grid-item tile button home'>
+                        <div class='grid-item tile button home' id='tile-bios'>
                             <div class='icon'></div>
                             <div class='title'>Bios</div>
                         </div>
-                        <div class='grid-item tile button home'>
+                        <div class='grid-item tile button home' id='tile-headlines2030'>
                             <div class='icon'></div>
                             <div class='title'>2030 Headlines</div>
                         </div>
-                        <div class='grid-item tile button home'>
+                        <div class='grid-item tile button home' id='tile-move2030'>
                             <div class='icon'></div>
                             <div class='title'>2030 Move</div>
                         </div>
-                        <div class='grid-item tile button home'>
+                        <div class='grid-item tile button home' id='tile-headlines2040'>
                             <div class='icon'></div>
                             <div class='title'>2040 Headlines</div>
                         </div>
-                        <div class='grid-item tile button home'>
+                        <div class='grid-item tile button home' id='tile-move2040'>
                             <div class='icon'></div>
                             <div class='title'>2040 Move</div>
                         </div>
                     </div>
+
                     <div class='main page hidden' id='main-resources'>
-                        <h3>Resources</h3>
                         <div class='button backbutton'></div>
+                        <h3>Resources</h3>
                         <p>Adopt your strategy to survive and succeed.</p>
                         <p>Invest your resources and attract support from others.</p>
                         <div id='resources-meter'><p>4</p></div>
                         <p>remaining</p>
+                    </div>
+                    <div class='main page hidden' id='main-bios'>
+                        <div class='button backbutton'></div>
+                        <h3>Bios</h3>
+                    </div>
+                    <div class='main page hidden' id='main-headlines2030'>
+                        <div class='button backbutton'></div>
+                        <h3>2030 Headlines</h3>
+                    </div>
+                    <div class='main page hidden' id='main-move2030'>
+                        <div class='button backbutton'></div>
+                        <h3>2030 Move</h3>
+                    </div>
+                    <div class='main page hidden' id='main-headlines2040'>
+                        <div class='button backbutton'></div>
+                        <h3>2040 Headlines</h3>
+                    </div>
+                    <div class='main page hidden' id='main-move2040'>
+                        <div class='button backbutton'></div>
+                        <h3>2040 Move</h3>
                     </div>
                 </div>
             </div>
