Single page app dev - popstate initiated, script removed to externl file, transitions animated

--- a/indexv1.html
+++ b/indexv1.html
@@ -36,7 +36,6 @@
                     </div>
 <!--                    <div id='panel'>the panel</div>-->
                     <div class='main grid-container' id='main-home'>
-
                         <div class='grid-item tile button home' id='tile-resources'>
                             <div class='icon resources'></div>
                             <div class='title'>Resources</div>
@@ -62,6 +61,7 @@
                             <div class='title'>2040 Move</div>
                         </div>
                     </div>
+
                     <div class='main page hidden' id='main-resources'>
                         <div class='button backbutton'></div>
                         <h3>Resources</h3>
@@ -97,76 +97,6 @@
             let homepage = 'main-home';
 //            let homepage = 'main-resources';
             let c = 10;
-            let oDivs = {
-                subheader: $('#subheader'),
-                icon: $('#subheader').find('#icon'),
-                crown: $('#subheader').find('#crown'),
-                summary: $('#summary'),
-                yourep: $('#yourep')
-            }
-            let oUp = {
-                subheader: {
-                    'padding-top': '190px'
-                },
-                icon: {
-                    width: '120px',
-                    height: '120px'
-                },
-                crown: {
-                    width: '58px',
-                    height: '58px',
-                    left: 'calc(50% + 29px)',
-                    top: '200px'
-                },
-                summary: {
-                    'font-size': '0px',
-                    'height': '0px'
-                },
-                yourep: {
-                    'font-size': '0px',
-                    'height': '0px'
-                }
-            };
-            let oDown = {
-                subheader: {
-                    'padding-top': '260px'
-                },
-                icon: {
-                    width: '210px',
-                    height: '210px'
-                },
-                crown: {
-                    width: '100px',
-                    height: '100px',
-                    left: 'calc(50% + 50px)',
-                    top: '330px'
-                },
-                summary: {
-                    'font-size': '3rem',
-                    'height': 'auto'
-                },
-                yourep: {
-                    'font-size': '2.4rem',
-                    'height': 'auto'
-                }
-            };
-            let oUpFunk = {
-                crown:
-                    function () {
-//                        console.log('oooooooo')
-                        $('#subheader').find('#crown').addClass('sub');
-                    }
-
-            };
-            let oDownFunk = {
-                crown:
-                    function () {
-//                        console.log('oooooooo')
-//                        $('#subheader').find('#crown').addClass('sub');
-                    }
-
-            };
-            let state = null;
             function countdown () {
                 $('#resources-meter').find('p').html(c);
                 if (c > 1) {
@@ -175,96 +105,42 @@
                     c = 10;
                 }
             }
-            function expandSubheader (boo, f, p) {
-                let d = 200;
-                let o = boo ? oUp : oDown
-                let ofk = boo ? oUpFunk : oDownFunk;
-                for (i in oDivs) {
-                    oDivs[i].animate(o[i], d, function () {
-                        if (ofk.hasOwnProperty(i)) {
-                            ofk[i]();
-                        }
-                    });
-                }
-                if (f) {
-                    setTimeout(f, d, p);
-                }
-            }
-            function test (p) {
-                console.log('test ' + p)
-            }
+
             function showPage (p) {
-                console.log('show ' + p);
-//                window.location = p + '.html';
                 $(`.main`).addClass('hidden');
-//                $(`#subheader`).toggleClass('sub', 2000);
-//                $(`#subheader`).removeClass('sub');
+                $(`#subheader`).removeClass('sub');
                 if (p) {
-//                    console.log($(`#${p}`));
                     $(`#${p}`).removeClass('hidden');
-                    $(`#${p}`).show();
-                    let newstate = p;
-                    window.history.pushState(newstate, '', "");
-                    console.log(window.history);
                     if (p !== 'main-home') {
-//                        $(`#subheader`).addClass('sub');
+                        $(`#subheader`).addClass('sub');
                     }
                     document.body.scrollTop = document.documentElement.scrollTop = 0;
                 }
-
             }
-            function mainClick (id, expand) {
-//                console.log(id);
-//                showPage(id);
-                id = 'main-' + id;
-                $(`.main`).addClass('hidden');
-                expandSubheader(expand, showPage, id);
-                $('.main').hide();
-//                showPage('main-' + id);
-            }
-            function setSubheaderVals () {
-                // Set all the return values for animating the subheader
-                for (var i in oDivs) {
-                    let o = oDown[i];
-                    for (j in o) {
-                        oDown[i][j] = oDivs[i].css(j);
-                    }
-                }
+            function mainClick (id) {
+                showPage();
+                showPage('main-' + id);
             }
             function setup () {
                 $('.tile.button.home').off('click');
                 $('.tile.button.home').on('click', function () {
                     let id = $(this).attr('id');
                     if (id) {
-                        mainClick(id.replace('tile-', ''), true);
+                        mainClick(id.replace('tile-', ''));
                     } else {
                         alert('clicked element requires an id but has none specified')
                     }
                 });
                 $('.backbutton').off('click');
                 $('.backbutton').on('click', function () {
-//                    showPage(homepage);
-//                    expandSubheader(false);
-                    mainClick('home', false);
+                    showPage(homepage);
                 });
 
                 $('.tile').css({height: $('.tile').width() + 'px'});
 //                showPage();
-//                showPage(homepage);
-//                setInterval(countdown, 2000);
-                state = homepage;
-                console.log('clear the history')
-                window.history.replaceState(state, '', '');
-                setSubheaderVals();
+                showPage(homepage);
+                setInterval(countdown, 2000);
             }
-            window.onpopstate = function (event) {
-                console.log(event);
-                if (event.state) {
-                    state = event.state;
-                }
-                console.log(state); // See example render function in summary below
-                showPage(state, true);
-            };
             $(document).ready(function () {
                 setup();
             });
