--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
         <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
 
         <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans&family=Roboto&display=swap" rel="stylesheet">
         <script src='js/menu.js'></script>
+<!--        <script src='js/devtools.js'></script>-->
 
         <link rel='stylesheet' href='css/mobilev1.css'>
     </head>
@@ -21,6 +23,7 @@
                 <div id='header'>
                     <div id='logo'></div>
                     <h1>company Name</h1>
+                    <div id='debug'></div>
                 </div>
                 <div id='content'>
                     <div id='subheader' class=''>
@@ -95,6 +98,7 @@
             </div>
         </div>
         <script>
+
             /*
             let homepage = 'main-home';
 //            let homepage = 'main-resources';
