scroller dev update -  not working

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </div>
                     </div>
 <!--                    <div id='panel'>the panel</div>-->
-                    <div class='main page hidden' id='main-selector'>
+                    <div class='main page ' id='main-selector'>
                         <div id='scroller grid-container grid-selector'>
                             <div class='grid-item tile button home' id='tile-government'>testing</div>
                             <div class='grid-item tile button home' id='tile-individual-change-maker'>testing</div>
@@ -50,7 +50,7 @@
                             <div class='grid-item tile button home' id='tile-public-voices'>testing</div>
                         </div>
                     </div>
-                    <div class='main grid-container' id='main-home'>
+                    <div class='main grid-container hidden' id='main-home'>
 
                         <div class='grid-item tile button home' id='tile-resources'>
                             <div class='icon resources'></div>
