branch switch commit

--- a/selector.html
+++ b/selector.html
@@ -39,7 +39,7 @@
                         </div>
                     </div>
 <!--                    <div id='panel'>the panel</div>-->
-                    <div class='main grid-container' id='main-home'>
+                    <div class='main grid-container-home' id='main-home'>
 
                         <div class='grid-item tile button home' id='tile-resources'>
                             <div class='icon resources'></div>
