--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div id='debug'></div>
                 </div>
                 <div id='content'>
-                    <div id='subheader' class=''>
+                    <div class='lead' id='subheader'>
                         <div id='yourep' class='full'>You represent</div>
                         <div id='icon'></div>
                         <div id='crown'></div>
@@ -99,181 +99,7 @@
         </div>
         <script>
 
-            /*
-            let homepage = 'main-home';
-//            let homepage = 'main-resources';
-            let c = 10;
-            let oDivs = {
-                subheader: $('#subheader'),
-                icon: $('#subheader').find('#icon'),
-                crown: $('#subheader').find('#crown'),
-                summary: $('#summary'),
-                yourep: $('#yourep')
-            }
-            let oUp = {
-                subheader: {
-                    'padding-top': '190px'
-                },
-                icon: {
-                    width: '120px',
-                    height: '120px'
-                },
-                crown: {
-                    width: '58px',
-                    height: '58px',
-                    left: 'calc(50% + 29px)',
-                    top: '200px'
-                },
-                summary: {
-                    'font-size': '0px',
-                    'height': '0px'
-                },
-                yourep: {
-                    'font-size': '0px',
-                    'height': '0px'
-                }
-            };
-            let oDown = {
-                subheader: {
-                    'padding-top': '260px'
-                },
-                icon: {
-                    width: '210px',
-                    height: '210px'
-                },
-                crown: {
-                    width: '100px',
-                    height: '100px',
-                    left: 'calc(50% + 50px)',
-                    top: '330px'
-                },
-                summary: {
-                    'font-size': '3rem',
-                    'height': 'auto'
-                },
-                yourep: {
-                    'font-size': '2.4rem',
-                    'height': 'auto'
-                }
-            };
-            let oUpFunk = {
-                crown:
-                    function () {
-//                        console.log('oooooooo')
-                        $('#subheader').find('#crown').addClass('sub');
-                    }
 
-            };
-            let oDownFunk = {
-                crown:
-                    function () {
-//                        console.log('oooooooo')
-//                        $('#subheader').find('#crown').addClass('sub');
-                    }
-
-            };
-            let state = null;
-            function countdown () {
-                $('#resources-meter').find('p').html(c);
-                if (c > 1) {
-                    c -= 1;
-                } else {
-                    c = 10;
-                }
-            }
-            function expandSubheader (boo, f, p) {
-                let d = 200;
-                let o = boo ? oUp : oDown
-                let ofk = boo ? oUpFunk : oDownFunk;
-                for (i in oDivs) {
-                    oDivs[i].animate(o[i], d, function () {
-                        if (ofk.hasOwnProperty(i)) {
-                            ofk[i]();
-                        }
-                    });
-                }
-                if (f) {
-                    setTimeout(f, d, p);
-                }
-            }
-            function test (p) {
-                console.log('test ' + p)
-            }
-            function showPage (p, update) {
-//                console.log('show ' + p);
-                $(`.main`).addClass('hidden');
-                if (p) {
-                    $(`#${p}`).removeClass('hidden');
-                    $(`#${p}`).show();
-                    const newState = {
-                        page: p
-                    };
-                    const newURL = '#' + p;
-                    if (update !== false && p) {
-                        window.history.pushState(newState, '', newURL);
-                    }
-                    if (p !== 'main-home') {
-//                        $(`#subheader`).addClass('sub');
-                    }
-                    document.body.scrollTop = document.documentElement.scrollTop = 0;
-                }
-
-            }
-            function mainClick (id, expand) {
-                console.log(id);
-                expand = id !== 'home';
-                console.log(expand);
-                id = 'main-' + id;
-                $(`.main`).addClass('hidden');
-                expandSubheader(expand, showPage, id);
-                $('.main').hide();
-//                showPage('main-' + id);
-            }
-            function setSubheaderVals () {
-                // Set all the return values for animating the subheader
-                for (var i in oDivs) {
-                    let o = oDown[i];
-                    for (j in o) {
-                        oDown[i][j] = oDivs[i].css(j);
-                    }
-                }
-            }
-            function setup () {
-                $('.tile.button.home').off('click');
-                $('.tile.button.home').on('click', function () {
-                    let id = $(this).attr('id');
-                    if (id) {
-                        mainClick(id.replace('tile-', ''), true);
-                    } else {
-                        alert('clicked element requires an id but has none specified')
-                    }
-                });
-                $('.backbutton').off('click');
-                $('.backbutton').on('click', function () {
-//                    showPage(homepage);
-//                    expandSubheader(false);
-                    mainClick('home', false);
-                });
-
-                $('.tile').css({height: $('.tile').width() + 'px'});
-//                showPage();
-//                showPage(homepage);
-//                setInterval(countdown, 2000);
-                state = homepage;
-                console.log('clear the history')
-//                window.history.replaceState(state, '', '');
-                setSubheaderVals();
-            }
-            window.addEventListener('popstate', function(event) {
-                if (event.state) {
-                    console.log(event.state);
-                    showPage(event.state.page, false);
-                }
-            });
-            $(document).ready(function () {
-                setup();
-            });
-            */
         </script>
     </body>
 </html>
